# embededrusts

./: .gitignore  README.md
blink-arduino-nano/: Cargo.toml  README.md
blink-arduino-nano/.cargo/: config.toml
blink-arduino-nano/src/: main.rs
blink-arduino-uno/: Cargo.toml  README.md
blink-arduino-uno/src/: main.rs
blink-attiny84/: Cargo.toml  README.md
blink-attiny84/.cargo/: config.toml
blink-attiny84/avr-specs/: avr-attiny84.json
blink-attiny84/src/: main.rs
blink-attiny85/: Cargo.toml  README.md
blink-attiny85/.cargo/: config.toml
blink-attiny85/src/: main.rs
blink-esp32-xtensa/: Cargo.toml  runVirtual.sh
blink-esp32-xtensa/.devcontainer/: Dockerfile
blink-esp32-xtensa/src/: lib.rs  main.rs
blink-esp32c6/: Cargo.toml
blink-esp32c6-nostd/: Cargo.toml  README.md
blink-esp32c6-nostd/.cargo/: config.toml
blink-esp32c6-nostd/src/: main.rs
blink-esp32c6/src/: main.rs
blink-rpipico/: Cargo.toml  blinky.rs  readme.md
ejercicios1/: Cargo.toml
neopixel-esp32c6/: Cargo.toml
neopixel-esp32c6/.cargo/: config.toml
wifi-esp32c6/: Cargo.toml
wifi-esp32c6/.cargo/: config.toml
wifi-esp32c6/src/: lib.rs  main.rs  mqttlib.rs  setup.rs  wifilib.rs
